fix: layout shifts and overflow on main at laptop view when side panel is open

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -11,22 +11,22 @@
 }
 
 /* Specific Styles for Item Description and Custom Fields */
-[data-bs-theme='dark'] .item-desc,
-[data-bs-theme='dark'] .custom-fields {
+[data-bs-theme="dark"] .item-desc,
+[data-bs-theme="dark"] .custom-fields {
   border: 1px solid #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
 }
 
 /* Styles for Placeholders */
-[data-bs-theme='light'] .picture-placeholder,
-[data-bs-theme='light'] .file-container {
+[data-bs-theme="light"] .picture-placeholder,
+[data-bs-theme="light"] .file-container {
   background-color: #f9f9f9;
   color: #333; /* Ensure light mode placeholder text is visible */
 }
 
-[data-bs-theme='dark'] .picture-placeholder,
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .picture-placeholder,
+[data-bs-theme="dark"] .file-container {
   border: 2px dashed #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
@@ -37,11 +37,11 @@
 /*   border-style: solid; */
 /* } */
 
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .file-container {
   border-style: solid;
 }
 
-[data-bs-theme='dark'] .items-card-text.editable {
+[data-bs-theme="dark"] .items-card-text.editable {
   color: #333;
 }
 
@@ -192,8 +192,16 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar ul li:not(:last-child),
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child),
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child) {
     transform: translateY(0);
     opacity: 1;
     max-height: 100%;
@@ -203,25 +211,46 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar > ul li > label > svg,
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg,
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg {
     transform: rotate(360deg);
   }
 
   /* close state */
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar {
     transform: translateX(1.5rem);
     transition-delay: 0.21s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul {
     gap: 0;
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul li:not(:last-child),
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul
+    li:not(:last-child),
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
     transform: translateY(20px);
     opacity: 0;
@@ -231,7 +260,13 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0s;
   }
 
-  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse > ul li > label > svg,
+  .navbar-toggle.nav-n-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    > ul
+    li
+    > label
+    > svg,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
     transform: rotate(180deg);
   }
@@ -249,12 +284,12 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     width: 100%;
   }
 
-  .page-wrapper.nav-n-content .theme-switch-dropdown {
+  .navbar-toggle.nav-n-content ~ .page-wrapper .theme-control-dropdown {
     display: none !important;
   }
 
-  .sub-top-nav-desktop {
-    left: calc(50% - var(--left-content-width) / 2);
+  .navbar-toggle.nav-n-content ~ .page-wrapper .sub-top-nav-desktop {
+    left: calc(50% - (var(--left-nav-width) / 3));
   }
 }
 
@@ -489,7 +524,7 @@ section {
 
 .sub-top-nav-desktop {
   position: absolute;
-  width: 75%; /* Set a fixed width, adjust as needed */
+  width: 90%; /* Set a fixed width, adjust as needed */
   max-width: 1400px; /* Limit the maximum width */
   margin-left: auto;
   margin-right: auto;
@@ -607,7 +642,9 @@ section {
   line-height: 1.4;
   padding: 4px 8px;
   border-radius: 6px;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   cursor: text;
   background-color: #f9f9f9;
 }
@@ -647,7 +684,9 @@ section {
   color: #374151;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
 }
 
 .project-alpha-action-button:hover {
@@ -732,7 +771,9 @@ section {
   border: 1px solid #d1d5db;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   display: none;
 }
 
@@ -764,7 +805,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   position: absolute;
   bottom: 20px; /* Position it at the bottom */
   right: 20px; /* Keep it aligned to the right */
@@ -1040,15 +1083,21 @@ section {
   }
 
   .mobile-stack .accordion-container {
-    transition: min-height 0.15s ease-out, max-height 0.15s ease-out;
+    transition:
+      min-height 0.15s ease-out,
+      max-height 0.15s ease-out;
   }
 
   /* container accordion close */
   .mobile-stack .accordion-container.triggered {
     --accordion-column-to-show: 1;
     --accordion-column-height: 44px;
-    min-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
-    max-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
+    min-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
+    max-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
     overflow: hidden;
   }
 
@@ -1058,11 +1107,15 @@ section {
     visibility: hidden;
     opacity: 0;
     transition-behavior: allow-discrete;
-    transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
+    transition:
+      opacity 0.15s ease-out,
+      visibility 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container > *:not(:nth-child(1)) {
-    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
+    transition:
+      transform 0.15s ease-out,
+      opacity 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container.triggering > *:not(:nth-child(1)) {
@@ -1091,23 +1144,33 @@ section {
     color: inherit;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta,
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta,
   .mobile-stack .accordion-container.triggered .accordion-trigger {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta {
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.1s ease-in, transform 0.1s ease-in;
+    transition:
+      opacity 0.1s ease-in,
+      transform 0.1s ease-in;
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accordion-meta {
     opacity: 0;
     transform: translateY(10px);
-    transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+    transition:
+      opacity 0.1s ease-out,
+      transform 0.1s ease-out;
   }
 
   /* icon */
@@ -1118,7 +1181,8 @@ section {
   }
 
   .mobile-stack .accordion-container td:has(.accordion-trigger) {
-    border-bottom: var(--falcon-border-width) var(--falcon-border-style) var(--falcon-border-color);
+    border-bottom: var(--falcon-border-width) var(--falcon-border-style)
+      var(--falcon-border-color);
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accor-open {
@@ -1154,7 +1218,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   border: none;
 }
 
@@ -1247,7 +1313,10 @@ section {
 .pictures-section {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* ensure a responsive design */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* ensure a responsive design */
   /* max-height: 350px; */
   /* to ensure there is no overflow */
   gap: 32px;
@@ -1294,11 +1363,14 @@ section {
   cursor: pointer;
   border-radius: 4px;
   overflow: hidden;
-  transition: border-color 0.1s ease, background-color 0.1s ease, max-height 0.1s ease;
+  transition:
+    border-color 0.1s ease,
+    background-color 0.1s ease,
+    max-height 0.1s ease;
 }
 
-.picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-.picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+.picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+.picture-placeholder:has(.uploaded-image[data-modular="270"]) .uploaded-image {
   max-width: 350px;
 }
 
@@ -1315,7 +1387,9 @@ section {
   background-color: inherit; /* git the background from parents instead for dark/light mode */
   border-radius: 4px;
   transform-origin: center;
-  transition: transform 0.2s ease, max-width 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    max-width 0.2s ease;
 }
 
 /* Add hover effect for better user experience */
@@ -1897,17 +1971,20 @@ div.gslide-media.gslide-inline {
 }
 
 @media (max-width: 768px) {
-  [data-bs-theme='light'] .file-container [data-bs-theme='light'] .picture-placeholder:has(img) {
+  [data-bs-theme="light"]
+    .file-container
+    [data-bs-theme="light"]
+    .picture-placeholder:has(img) {
     border-style: solid;
     border-width: 1px;
     /* border-color: #3c465280; */
   }
 
-  [data-bs-theme='light'] .picture-placeholder {
+  [data-bs-theme="light"] .picture-placeholder {
     border-color: transparent;
   }
 
-  [data-bs-theme='dark'] .picture-placeholder {
+  [data-bs-theme="dark"] .picture-placeholder {
     border-style: solid;
     border-width: 1px;
   }
@@ -1944,8 +2021,9 @@ div.gslide-media.gslide-inline {
     min-height: 350px;
   }
 
-  .picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-  .picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+  .picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+  .picture-placeholder:has(.uploaded-image[data-modular="270"])
+    .uploaded-image {
     /* height: 90%; */
     max-height: 92%;
   }
@@ -1955,7 +2033,9 @@ div.gslide-media.gslide-inline {
   .post1:hover .gallery-menu {
     visibility: visible;
     opacity: 100;
-    transition: visibility 0s linear 0.15s, opacity 0.25s ease-in-out;
+    transition:
+      visibility 0s linear 0.15s,
+      opacity 0.25s ease-in-out;
   }
 }
 
@@ -1968,8 +2048,8 @@ div.gslide-media.gslide-inline {
 
 /* for statuses of invoice */
 /* If data-status="due" */
-[data-status='due'] svg,
-[data-status='due'] p {
+[data-status="due"] svg,
+[data-status="due"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-danger-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -1977,8 +2057,8 @@ div.gslide-media.gslide-inline {
 }
 
 /* If data-status="completed" (better than "not-due") */
-[data-status='settled'] svg,
-[data-status='settled'] p {
+[data-status="settled"] svg,
+[data-status="settled"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-success-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
